# internal/common/dto/objectIds.go
@@ -1,5 +1,0 @@
-package dto
-
-type ObjectIdsDto struct {
-	ObjectIDs []string `json:"objectIDs"`
-}
