# internal/common/dto/seat.go
@@ -6,6 +6,7 @@ type Seat struct {
 	Id       uuid.UUID `json:"id"`
 	Color    string    `json:"color"`
 	SeatType string    `json:"type"`
+	SeatNum  string    `json:"number_seat"`
 	CoordX   float64   `json:"coord_x"`
 	CoordY   float64   `json:"coord_y"`
 }
